log
Sat 18 May 2024 10:17:05 PM UTC: 
 tests:  0|5
total_score: 0/70
1cb0c7b
Sat 18 May 2024 10:18:50 PM UTC: 
 sudoku.c | 44 ++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 44 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_in_row_col’:
sudoku.c:67:10: error: unused variable ‘j’ [-Werror=unused-variable]
   67 |    int i,j;
      |          ^
sudoku.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
   72 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
07bf6b3
Sat 18 May 2024 10:19:09 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_in_row_col’:
sudoku.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
   72 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e79283d
Sat 18 May 2024 10:19:43 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
8dd71bf
Sat 18 May 2024 10:21:01 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
9bdfda5
